Add manual redirect to Netlify

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <p>
-      If you are not redirected, <a href="https://pinpointpuzzle.netlify.app/">click here</a>.
+      If you are not redirected, <a href="https://pinpointpuzzle.netlify.app/">click here to redirect</a>.
     </p>
   </body>
 </html>
